[ taotao-cloud-project-1587 ] add[ tencent cloud ]